# movie-recommendation

./: .gitignore  EDA.ipynb  Makefile
client/: package.json  pnpm-lock.yaml
client/src/: App.tsx  index.css
client/src/components/layout/: header.tsx
client/src/components/ui/: theme-toggle.tsx
client/src/hooks/: use-auth.ts
client/src/pages/: loginPage.tsx  perferencesPage.tsx  registerPage.tsx
client/src/providers/: authProvider.tsx
client/src/routes/: routes.tsx
client/src/types/: index.ts
notebooks/: Data_Set_Create.ipynb  check.py
server/: .env  pyproject.toml
server/model/: data_seed.py  enriched_movies.csv
server/notebooks/: preprocess.ipynb
server/src/: __init__.py  config.py
server/src/api/: middleware.py  models.py  routes.py  schemas.py  services.py
server/src/db/: __init__.py  seed_db.py
server/src/model/: data_seed.py  docs.md  filter_actor.py  filter_director.py  preprocess_data.py
server/src/model/data/: actor_summary.csv  director_average_ratings.csv  director_summary.csv  filter.ipynb
